# Proyecto-IMT3810

./: .flake8  .gitignore  BEM_TEST.ipynb  README.md  Simulation.ipynb  main.py  pyproject.toml  test_utils.py
ProyectoIMT3810/: BEM_TEST.ipynb  pyproject.toml
bempp/api/assembly/: potential_operator.py
bempp/api/linalg/: direct_solvers.py  iterative_solvers.py
bempp/api/operators/: __init__.py
bempp/api/operators/boundary/: __init__.py  common.py  helmholtz.py  laplace.py  maxwell.py  modified_helmholtz.py  stokes.py
bempp/api/operators/potential/: __init__.py  helmholtz.py  laplace.py  maxwell.py  stokes.py
bempp/api/utils/: data_types.py  timing.py
bempp/core/: dense_potential_assembler.py  numba_assemblers.py  numba_kernels.py
bempp/core/sources/include/: kernels.h
bempp/core/sources/kernels/: evaluate_electric_field_potential_novec.cl  evaluate_electric_field_potential_vec.cl  evaluate_magnetic_field_potential_novec.cl  evaluate_magnetic_field_potential_vec.cl  evaluate_maxwell_electric_far_field_novec.cl  evaluate_maxwell_electric_far_field_vec.cl  evaluate_maxwell_magnetic_far_field_novec.cl  evaluate_maxwell_magnetic_far_field_vec.cl  evaluate_scalar_potential_novec.cl  evaluate_scalar_potential_vec.cl  sum_for_potential_novec.cl
src/: green_functions.py
utils/: __init__.py
